<resources>
    <string name="app_name">Worker Notification</string>

    <string name="action_settings">Settings</string>

    <string name="msg_error_reminder_on_no_deadline">Reminder cannot be set without deadline</string>

    <string name="menu_settings">Settings</string>

    <string name="label_updated">Updated</string>
    <string name="label_selected">Selected</string>
    <string name="label_search">Search</string>

    <string name="label_save">Save</string>

    <string name="label_todo">To-do</string>
    <string name="label_todos">To-dos</string>
    <string name="symbol_dash">-</string>



    <string name="label_done">Done</string>

    <string name="label_reminder">Reminder</string>
    <string name="label_add_reminder">Add reminder</string>

    <string name="label_deadline">Deadline</string>
    <string name="label_add_deadline">Add deadline</string>

    <string name="label_remind_me">Remind me</string>


    <string name="dummy_checklist_count">100\/200</string>

    <string name="msg_past_date">Past date</string>

    <string name="msg_delete_todo">Do you want to permanently delete this To-do?</string>
    <string name="msg_delete_todo_safe">Do you want to delete this To-do?</string>

    <string name="msg_delete_selection">Do you want to permanently delete this selection?</string>
    <string name="msg_delete_selections">Do you want to permanently delete these selections?</string>

    <string name="msg_empty_text">Text is empty, add text and try again</string>


    <string name="msg_empty_todo_list">No to-dos</string>
    <string name="msg_empty_todo_list_archived">No trashed to-dos</string>


    <string name="channel_reminder_name">@string/label_reminder</string>
    <string name="channel_reminder_description">This is used to notify you on To-dos</string>

    <string name="label_delete">Delete</string>
    <string name="empty_string"> </string>
    <string name="label_share">Share</string>
    <string name="label_finish">Finish</string>


    <string name="label_add">Add</string>
    <string name="label_edit">Edit</string>

    <string name="label_not_done">Not done</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>



    <string name="label_type_here">Type here</string>




    <string name="label_new">New</string>


</resources>