<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/miSearch"
        android:title="@string/label_search"
        android:icon="@drawable/ic_search_24"
        app:showAsAction="ifRoom"
        android:visible="false"
        tools:visible="true"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <item
        android:id="@+id/miDelete"
        android:icon="@drawable/ic_delete_24"
        app:showAsAction="always"
        tools:visible="true"
        android:visible="false"
        android:title="@string/label_delete" />

    <item
        android:id="@+id/miShare"
        android:icon="@drawable/ic_share_24"
        app:showAsAction="always"
        tools:visible="true"
        android:visible="false"
        android:title="@string/label_share" />


</menu>