<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="action"
            type="String" />

        <variable
            name="viewModel"
            type="com.ayia.workernotification.presentation.TodoFormViewModel" />

        <import type="com.ayia.workernotification.util.Constants"/>

        <import type="android.widget.CompoundButton" />

        <import type="com.ayia.workernotification.util.DateUtil"/>


    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".FragmentTodoForm">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal"
            >


            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="@{viewModel.done}"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:onClick="@{(view) -> viewModel.onCheckBoxClicked(((CompoundButton)view).isChecked())}"
                android:text="@string/label_done"
                android:textSize="12sp"
                style="@style/CircleCheckbox"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/remindMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.reminderOn}"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:onClick="@{(view) -> viewModel.setReminderOn(((CompoundButton)view).isChecked())}"
                android:text="@string/label_remind_me"
                android:textSize="12sp"
                style="@style/ReminderCheckbox"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Remind me" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:ems="10"
            android:hint="@string/label_todo"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@={viewModel.title}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/label_todo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:isNotGone="@{action == Constants.ACTION_NEW || (action==Constants.ACTION_EDIT &amp; viewModel.deadline != null)}"
            >

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/badge_info"
                android:gravity="center"
                android:textColor="@color/black"
                app:todoInfo="@{viewModel.deadline}"
                action="@{action}"
                android:textSize="11sp"
                tools:text="Tomorrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />




            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toStartOf="@id/ivRemoveReminder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvInfo"
                android:id="@+id/layoutRemainder"
                android:gravity="center_vertical"
                >

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:contentPadding="4dp"
                    android:layout_margin="2dp"
                    android:id="@+id/cardDate"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Sat 23 Apr 2022"
                        android:layout_marginHorizontal="4dp"
                        android:text="@{viewModel.deadline != null? DateUtil.toDateString(viewModel.deadline):@string/label_add_deadline}"
                        android:id="@+id/tvReminder"
                        />

                </com.google.android.material.card.MaterialCardView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symbol_dash"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_marginHorizontal="4dp"
                    app:isNotGone="@{viewModel.deadline != null}"
                    />


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:contentPadding="4dp"
                    android:layout_margin="2dp"
                    android:id="@+id/cardTime"
                    app:isNotGone="@{viewModel.deadline != null}"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="03:21:29 AM"
                        android:layout_marginHorizontal="4dp"
                        android:text="@{viewModel.deadline != null? DateUtil.toTimeString(viewModel.deadline):@string/label_add_deadline}"
                        android:id="@+id/tvTime"
                        />
                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>




            <ImageView
                android:id="@+id/ivRemoveReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_cancel_24"
                android:contentDescription="@string/label_reminder"
                android:focusable="true"
                app:isNotGone="@{viewModel.deadline != null}"
                android:background="?selectableItemBackground"
                android:onClick="@{()-> viewModel.removeDeadline()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/layoutRemainder"
                app:layout_constraintBottom_toBottomOf="@id/layoutRemainder"
                android:padding="4dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="add"
            android:layout_marginTop="16dp"
            android:enabled="@{viewModel.validForm}"
            android:text="@{action.equals(Constants.ACTION_NEW)? @string/label_add:@string/label_save}"
            />





    </LinearLayout>

</layout>